--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
     <style>
       @media (min-width: 600px) {
         .page-wrapper {
-          background-image: url('{{ . | relURL }}');
+          background-image: url('{{ strings.TrimPrefix "/" . | relURL }}');
         }
       }
     </style>
@@ -26,14 +26,14 @@
 
         <!-- Hero Section -->
         <section class="hero"
-          style="background-image: url('{{ .Site.Params.backgroundImage | relURL }}');
+          style="background-image: url('{{ strings.TrimPrefix "/" .Site.Params.backgroundImage | relURL }}');
                  --overlay-color: {{ .Site.Params.overlayColor | default "#717A97" }};
                  --overlay-opacity: {{ .Site.Params.overlayOpacity | default "0" }};">
           <article>
 
             {{ with .Site.Params.artworkImage }}
             <div class="artwork">
-              <img src="{{ . | relURL }}" alt="Artwork" />
+              <img src="{{ strings.TrimPrefix "/" . | relURL }}" alt="Artwork" />
             </div>
             {{ end }}
 
@@ -97,7 +97,7 @@
               <div class="link-row-inner">
                 <div class="link-logo">
                   {{ if .logo }}
-                    <img src="{{ .logo | relURL }}" alt="{{ .name }}" />
+                    <img src="{{ strings.TrimPrefix "/" .logo | relURL }}" alt="{{ .name }}" />
                   {{ else }}
                     <span class="link-name-fallback">{{ .name }}</span>
                   {{ end }}
